--- a/Instructions/20537A_LAB_AK_03.md
+++ b/Instructions/20537A_LAB_AK_03.md
@@ -13,15 +13,16 @@ Lab: Confirming prerequisites and installing Microsoft Azure Stack
 
 3.  In the **Administrator: Windows PowerShell** Console enter the following
     PowerShell command and press Enter:
-
+    
+```
 Get-CimInstance -ClassName Win32_Processor -Property Name,
 SecondLevelAddressTranslationExtensions, VirtualizationFirmwareEnabled,
-VMMonitorModeExtensions \|
-
+VMMonitorModeExtensions |
 Format-List Name, SecondLevelAddressTranslationExtensions,
 VirtualizationFirmwareEnabled, VMMonitorModeExtensions
+```
 
-1.  In the information that is returned, review the following:
+4.  In the information that is returned, review the following:
 
 -   SecondLevelAddressTranslationExtensions
 
@@ -29,70 +30,85 @@ VirtualizationFirmwareEnabled, VMMonitorModeExtensions
 
 -   VMMonitorModeExtensions
 
-1.  Enter the following PowerShell command and press Enter:
+5.  Enter the following PowerShell command and press Enter:
 
+```
 (Get-CimInstance -ClassName Win32_Processor).Count
+```
 
-1.  Ensure the number returned is **2** or higher.
+6.  Ensure the number returned is **2** or higher.
 
-2.  Enter the following PowerShell command and press Enter:
+7.  Enter the following PowerShell command and press Enter:
 
+```
 Get-CimInstance -ClassName Win32_Processor -Property Name, SocketDesignation,
-NumberOfCores, NumberOfEnabledCore, NumberOfLogicalProcessors \| Format-List
-Name, SocketDesignation, NumberOfCores, NumberOfEnabledCore,
+NumberOfCores, NumberOfEnabledCore, NumberOfLogicalProcessors | Format-List Name, 
+SocketDesignation, NumberOfCores, NumberOfEnabledCore,
 NumberOfLogicalProcessors
+```
 
-1.  Ensure the **NumberOfCores** for each CPU returned is **6** or higher.
+8.  Ensure the **NumberOfCores** for each CPU returned is **6** or higher.
 
-2.  Leave the **Administrator: Windows PowerShel**l Console open.
+9.  Leave the **Administrator: Windows PowerShel**l Console open.
 
 ####   Task 2: Confirm the number of drives
 
 1.  In the **Administrator: Windows PowerShell** Console on **MAS-HOST01** enter
     the following **PowerShell** command and press Enter:
 
-\$DiskIndexes = Get-CimInstance -ClassName Win32_DiskPartition \| Where-Object
--FilterScript {\$_.BootPartition -eq \$true} \| Select-Object -ExpandProperty
-DiskIndex
+```
+$DiskIndexes = Get-CimInstance -ClassName Win32_DiskPartition | 
+Where-Object -FilterScript {$_.BootPartition -eq $true} | 
+Select-Object -ExpandProperty DiskIndex
+```
 
-1.  This will obtain the **Disk Index** of the disk partitions that are part of
+2.  This will obtain the **Disk Index** of the disk partitions that are part of
     the boot process, whether they be VHDX file or physical disk.
 
-2.  Enter the following **PowerShell** command to see the Disk Indexes and press
+3.  Enter the following **PowerShell** command to see the Disk Indexes and press
     enter:
 
-\$DiskIndexes
+```
+$DiskIndexes
+```
 
-1.  Enter the following PowerShell command and press Enter:
+4.  Enter the following PowerShell command and press Enter:
 
-Get-PhysicalDisk \| Where-Object -FilterScript {\$DiskIndexes -notcontains
-\$_.DeviceID} \| Format-Table FriendlyName, OperationalStatus, HealthStatus,
-\@{Name="Size";Expression={(\$_.Size / 1GB).ToString() + " GB"}}
+```
+Get-PhysicalDisk | Where-Object -FilterScript {$DiskIndexes -notcontains
+$_.DeviceID} | Format-Table FriendlyName, OperationalStatus, HealthStatus,
+@{Name="Size";Expression={($_.Size / 1GB).ToString() + " GB"}}
+```
 
-1.  This shows the disks that are not part of the operating system boot process.
+5.  This shows the disks that are not part of the operating system boot process.
     You should have at least 4 disks listed.
 
 ####   Task 3: Confirm the quantity of memory
 
-1.  In the **Administrator: Windows PowerShell** Console on MAS-HOST01 enter the
+6.  In the **Administrator: Windows PowerShell** Console on MAS-HOST01 enter the
     following **PowerShell** command and press Enter:
 
-\$Memory = (Get-Ciminstance Win32_OperatingSystem \| Select-Object
--ExpandProperty MaxProcessMemorySize) /1GB
+```
+$Memory = (Get-Ciminstance Win32_OperatingSystem | 
+Select-Object -ExpandProperty MaxProcessMemorySize) /1GB
+```
 
-1.  Enter the following **PowerShell** command to see the amount of memory
+7.  Enter the following **PowerShell** command to see the amount of memory
     installed and press enter:
 
-\$Memory
+```
+$Memory
+```
 
-1.  To round the number, enter the following **PowerShell** command and press
+8.  To round the number, enter the following **PowerShell** command and press
     enter:
+```
+[math]::Round($Memory,0)
+```
 
-[math]::Round(\$Memory,0)
+9.  This will display the amount of memory in **GB**.
 
-1.  This will display the amount of memory in **GB**.
-
-2.  Close the **Administrator: Windows PowerShell** window.
+10.  Close the **Administrator: Windows PowerShell** window.
 
 **Results**: After this exercise, you should have confirmed the hardware on
 which the Azure Stack Development Kit is to be deployed meets the prerequisites.
@@ -111,12 +127,12 @@ which the Azure Stack Development Kit is to be deployed meets the prerequisites.
 
 -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **More Services**.
 
-2.  Under **Administrative Resources** click **Resource Providers**.
+5.  Under **Administrative Resources** click **Resource Providers**.
 
-3.  In the **Resource Providers** blade, ensure the following **Resource
+6.  In the **Resource Providers** blade, ensure the following **Resource
     Providers** are listed:
 
 -   Compute
@@ -129,12 +145,12 @@ which the Azure Stack Development Kit is to be deployed meets the prerequisites.
 
 -   Storage
 
-1.  Open a new tab in **Internet Explorer** and browse to
+7.  Open a new tab in **Internet Explorer** and browse to
     **https://portal.local.azurestack.external**
 
-2.  In the navigation pane, click **More services**.
+8.  In the navigation pane, click **More services**.
 
-3.  Confirm the list of **Services** returned include the following:
+9.  Confirm the list of **Services** returned include the following:
 
 -   Dashboard
 
@@ -156,7 +172,7 @@ which the Azure Stack Development Kit is to be deployed meets the prerequisites.
 
 -   Audit logs
 
-1.  Close the **https://portal.local.azurestack.external** tab that was opened.
+10.  Close the **https://portal.local.azurestack.external** tab that was opened.
 
 ####   Task 2: Ensure no critical alerts are present in Azure Stack
 
@@ -176,7 +192,7 @@ which the Azure Stack Development Kit is to be deployed meets the prerequisites.
 
 -   Resource Providers
 
-1.  Sign-out of the **Azure Stack** Portal and then close **Internet Explorer**.
+5.  Sign-out of the **Azure Stack** Portal and then close **Internet Explorer**.
 
 **Results**: After this exercise is complete, you will be able to determine if
 the Azure Stack Development Kit has been successfully installed and is operating
