--- a/Instructions/20537A_LAB_AK_04.md
+++ b/Instructions/20537A_LAB_AK_04.md
@@ -16,12 +16,12 @@ Lab: Managing Offers and Plans in Microsoft Azure Stack
 
 -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **Plans.**
 
-2.  Click **Add**.
+5.  Click **Add**.
 
-3.  In the **New Plan** blade that opens complete the form using the following
+6.  In the **New Plan** blade that opens complete the form using the following
     settings, all other settings should remain default:
 
 -   Display Name: Virtual-MachinesX
@@ -30,13 +30,13 @@ Lab: Managing Offers and Plans in Microsoft Azure Stack
 
 -   Resource Group Name: **RG-OffersAndPlansX**
 
--   Services: **Microsoft.Compute, Microsoft.Network and Microsoft.Storage**
+-   Services: **Microsoft.Storage, Microsoft.Network, and Microsoft.Compute**
 
--   Quotas: Accept default **Quotas**.
+-   Quotas: Select **Default Quota** for each of the above services.
 
-1.  Click **Create** to create the **Plan**.
+7.  Click **Create** to create the **Plan**.
 
-2.  In the **Plans** blade that opens confirm the **Virtual-MachinesX** Plan is
+8.  In the **Plans** blade that opens confirm the **Virtual-MachinesX** Plan is
     listed. If it is not listed, click the **Refresh** button at the top of the
     blade.
 
@@ -57,21 +57,21 @@ Lab: Managing Offers and Plans in Microsoft Azure Stack
 
 -   Services: **Microsoft.Compute**
 
-1.  Click **Quotas**.
+4.  Click **Quotas**.
 
-2.  Click **Microsoft.Compute (local)** and then click **Create new quota.**
+5.  Click **Microsoft.Compute (local)** and then click **Create new quota.**
 
-3.  In the **Name** box, type **Additional-VMsX**.
+6.  In the **Name** box, type **Additional-VMsX**.
 
-4.  In the **Max number of virtual machines** box, remove **50** and then type
+7.  In the **Max number of virtual machines** box, remove **50** and then type
     **5**.
 
-5.  Click **OK** and then click **Additional-VMsX** to select this **Quota**.
+8.  Click **OK** and then click **Additional-VMsX** to select this **Quota**.
     Then click **OK**.
 
-6.  Click **Create** to create the **Plan**.
+9.  Click **Create** to create the **Plan**.
 
-7.  In the **Plans** blade that opens confirm the **Virtual-Machines-Add-OnX**
+10.  In the **Plans** blade that opens confirm the **Virtual-Machines-Add-OnX**
     Plan is listed. If it is not listed, click the **Refresh** button at the top
     of the blade.
 
@@ -89,7 +89,7 @@ be created per tenant.
 
 2.  Click **Add**.
 
-3.  In the **New Offer** blade that opens configure the following settings. All
+3.  In the **New offer** blade that opens configure the following settings. All
     other settings should remain as default:
 
 -   Display Name: **Virtual MachinesX**
@@ -102,9 +102,9 @@ be created per tenant.
 
 -   Base plans: **virtual-machinesX.**
 
-1.  Click **Create** to create the **Offer**.
+4.  Click **Create** to create the **Offer**.
 
-2.  In the **Offers** blade that opens, confirm the **virtual-machinesX** Offer
+5.  In the **Offers** blade that opens, confirm the **virtual-machinesX** Offer
     is listed. If it is not listed, click the **Refresh** button at the top of
     the blade.
 
@@ -116,11 +116,11 @@ be created per tenant.
 2.  In the **Offers** blade that opens, click **virtual-machinesX**.
 
 3.  In the **virtual-machinesX** page that opens, scroll down and then click
-    **Add On Plans**.
+    **Add on plans**.
 
 4.  Click **Add**.
 
-5.  In the **Plan** blade that opens click **virtual-machines-add-onX** and then
+5.  In the **Plan** blade that opens click **Virtual-Machines-Add-OnX** and then
     click **Select**.
 
 6.  Close the **virtual-machinesX Add On Plans** page.
@@ -148,7 +148,7 @@ machines add-on plan with the offer.
 
 ####   Task 2: Subscribing to an Offer
 
-1.  In the **Azure Stack Portal**, click the settings button on the toolbar.
+1.  In the **Azure Stack Portal**, click the settings button on the toolbar in Internet Explorer.
 
 2.  Navigate to **Safety** and then click **InPrivate Browsing**.
 
@@ -173,7 +173,7 @@ machines add-on plan with the offer.
 
 11. Click **More Services** and then click **Subscriptions**.
 
-12. Confirm the **Virtual MachinesX Subscription** is listed. If it is not
+12. Confirm the **Virtual MachinesX** Subscription is listed. If it is not
     listed, press **F5** to refresh the entire browser window.
 
 13. Do not close the **InPrivate browsing** window.
@@ -209,51 +209,55 @@ tenant and subscribed to the virtual machines offer.
 1.  On **MAS-HOST01**, create a folder in the **C:** named **StudentX** where
     **X** is the student number that was assigned to you.
 
-2.  On **MAS-HOST1**, navigate to **C:\\ Media\\ModuleFiles\\Module04\\ and copy
-    the Azure Stack Marketplace Item Generator and Sample folder to
-    C:\\StudentX.**
+2.  On **MAS-HOST1**, navigate to **C:\\Media\\ModuleFiles\\Module04\\** and copy
+    the **Azure Stack Marketplace Item Generator and Sample** folder to
+    **C:\\StudentX.**
 
 3.  Rename the **C:\\StudentX\\Azure Stack Marketplace Item Generator and Sample
     \\SimpleVMTemplate** folder to **Contoso.StockCheck**.
 
-4.  Navigate to the **C:\\ StudentX\\Azure Stack Marketplace Item Generator and
+4.  Navigate to the **C:\\StudentX\\Azure Stack Marketplace Item Generator and
     Sample\\Contoso.StockCheck\\strings** folder and right-click the
     **resources.json** file, and then click **Open with**, and then click
     **Notepad**.
 
 5.  Edit the third, fourth and fifth lines as shown below:
 
-6.  "summary": **"Check stock availability and price",**
+```
+"summary": "Check stock availability and price",
+```
+```
+"longSummary": "This application can be used to check availability of
+    Contoso's stock and also get an up-to-date price on each stock item",
+```
+```
+"description": "This application can be used to check availability of
+    Contoso's stock and also get an up-to-date price on each stock item",
+```
 
-7.  "longSummary": **"This application can be used to check availability of
-    Contoso's stock and also get an up-to-date price on each stock item",**
+6.  Save and close the **resources.resjson** file.
 
-8.  "description": **"This application can be used to check availability of
-    Contoso's stock and also get an up-to-date price on each stock item",**
-
-9.  Save and close the **resources.resjson** file.
-
-10. Navigate to the **C:\\StudentX\\Azure Stack Marketplace Item Generator and
+7. Navigate to the **C:\\StudentX\\Azure Stack Marketplace Item Generator and
     Sample\\Contoso.StockCheck** folder and right-click the **manifest.json**
     file and then click **Open with,** and then click **Notepad**.
 
-11. Edit the lines as shown below:
+8. Edit the lines as shown below:
 
-12. "name": **"StockCheckX",**
-
-13. "publisher": **"ContosoX",**
-
-14. "version": **"1.0.0",**
-
-15. "categories"**:[**
-
-    **"ContosoX"**
-
+```
+"name": "StockCheckX",
+```
+```
+"publisher": "ContosoX",
+```
+```
+"categories":[
+    "ContosoX"
     ]
+```
 
-16. Replace **X** in **Step 8** with your Student number.
+9. Replace **X** in **Step 8** with your Student number.
 
-17. Save and close the **manifest.json** file.
+10. Save and close the **manifest.json** file.
 
 ####   Task 2: Package the new Marketplace Item
 
@@ -268,14 +272,16 @@ tenant and subscribed to the virtual machines offer.
 
 4.  Type the following command and then press enter on the keyboard:
 
-AzureGalleryPackager.exe package -m " C:\\StudentX\\Azure Stack Marketplace Item
-Generator and Sample\\Contoso.StockCheck\\manifest.json" -o "
-C:\\StudentX\\Azure Stack Marketplace Item Generator and
-Sample\\Contoso.StockCheck"
+```
+AzureGalleryPackager.exe package -m "C:\StudentX\Azure Stack Marketplace Item
+Generator and Sample\Contoso.StockCheck\manifest.json" -o 
+"C:\StudentX\Azure Stack Marketplace Item Generator and
+Sample\Contoso.StockCheck"
+```
 
-1.  Close the **Administrator: Command Prompt** window.
+5.  Close the **Administrator: Command Prompt** window.
 
-2.  Navigate to **C:\\StudentX**\\**Azure Stack Marketplace Item Generator and
+6.  Navigate to **C:\\StudentX**\\**Azure Stack Marketplace Item Generator and
     Sample\\Contoso.StockCheck** and confirm the
     **ContosoX.StockCheckX.1.0.0.azpkg** file is present.
 
@@ -288,61 +294,85 @@ Sample\\Contoso.StockCheck"
 
 3.  In the **Administrator: Windows PowerShell** window that opens type the
     following commands pressing enter after each command:
+    
+**NOTE:  Be sure to replace X with your student number**
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+```
+Import-Module C:\AzureStack-Tools-master\Connect\\AzureStack.Connect.psm1
+```
 
-Add-AzureRmEnvironment -Name AzureStackAdminX -ArmEndpoint
-"https://adminmanagement.local.azurestack.external"
+```
+Add-AzureRmEnvironment -Name AzureStackAdminX -ArmEndpoint "https://adminmanagement.local.azurestack.external"
+```
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
 
-\$Cred = New-Object System.Management.Automation.PSCredential
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\AzureStackAdminX", $Password)
+```
 
-("AzureStack\\AzureStackAdminX", \$Password)
+```
+$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStackAdminX
+```
 
-\$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStackAdminX
-
-1.  Enter the following PowerShell command and press Enter to login to Azure
+4.  Enter the following PowerShell command and press Enter to login to Azure
     Stack:
+    
+**NOTE:  Be sure to replace X with your student number**
 
-Login-AzureRmAccount -EnvironmentName "AzureStackAdminX" -TenantId \$tenantID
--Credential \$Cred
+```
+Login-AzureRmAccount -EnvironmentName "AzureStackAdminX" -TenantId $tenantID -Credential $Cred
+```
 
-1.  If a **Select Y to enable data collection [Y/N]** prompt opens, type **N**
+5.  If a **Select Y to enable data collection [Y/N]** prompt opens, type **N**
     and then press enter.
 
-2.  Type the following commands pressing enter after each command:
+6.  Type the following commands pressing enter after each command:
 
-\$subscriptionid = (Get-AzureRmSubscription -SubscriptionName 'Default Provider
-Subscription').SubscriptionId
+**NOTE:  Be sure to replace X with your student number**
 
-Select-AzureRMSubscription -SubscriptionID \$Subscriptionid
+```
+$subscriptionid = (Get-AzureRmSubscription -SubscriptionName 'Default Provider Subscription').SubscriptionId
+```
 
+```
+Select-AzureRMSubscription -SubscriptionID $Subscriptionid
+```
+
+```
 New-AzureRmResourceGroup -Name azurestackX -Location local
+```
 
-New-AzureRmStorageAccount -ResourceGroupName azurestackX -Name
-azurestackstorageX -Type Standard_LRS -location local
+```
+New-AzureRmStorageAccount -ResourceGroupName azurestackX -Name azurestackstorageX -Type Standard_LRS -location local
+```
 
-Set-AzureRMCurrentStorageAccount -ResourceGroupName azurestackX
--StorageAccountName azurestackstorageX
+```
+Set-AzureRMCurrentStorageAccount -ResourceGroupName azurestackX -StorageAccountName azurestackstorageX
+```
 
-\$StorageAccount = Get-AzureRmStorageAccount -ResourceGroupName azurestackX
--Name azurestackstorageX
+```
+$StorageAccount = Get-AzureRmStorageAccount -ResourceGroupName azurestackX -Name azurestackstorageX
+```
 
-\$GalleryContainer = New-AzureStorageContainer -Name gallery -Permission Blob
--Context \$StorageAccount.Context
+```
+$GalleryContainer = New-AzureStorageContainer -Name gallery -Permission Blob -Context $StorageAccount.Context
+```
 
-\$AzureStackPackage = \$GalleryContainer \| Set-AzureStorageBlobContent -File
-"C:\\StudentX\\Azure Stack Marketplace Item Generator and
-Sample\\Contoso.StockCheck\\ContosoX.StockCheckX.1.0.0.azpkg"
+```
+$AzureStackPackage = $GalleryContainer | Set-AzureStorageBlobContent -File "C:\StudentX\Azure Stack Marketplace Item Generator and Sample\Contoso.StockCheck\ContosoX.StockCheckX.1.0.0.azpkg"
+```
 
-Add-AzSGalleryItem -GalleryItemUri
-\$AzureStackPackage.ICloudBlob.StorageUri.PrimaryUri.AbsoluteUri
+```
+Add-AzSGalleryItem -GalleryItemUri $AzureStackPackage.ICloudBlob.StorageUri.PrimaryUri.AbsoluteUri
+```
 
-1.  After entering the final command, you should receive a **Status Code** of
+7.  After entering the final command, you should receive a **Status Code** of
     **Created**.
 
-2.  Close the **Administrator: Windows PowerShell** window.
+8.  Close the **Administrator: Windows PowerShell** window.
 
 ####   Task 4: Confirm the new Marketplace Item is available in the Azure Stack Portal
 
@@ -356,15 +386,15 @@ Add-AzSGalleryItem -GalleryItemUri
 
 -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration,** page that opens, click
+4.  In the **Microsoft Azure Stack - Administration,** page that opens, click
     **New**
 
-2.  Notice the new **ContosoX Marketplace** item is now displayed.
+5.  Notice the new **ContosoX** Marketplace** item is now displayed.
 
-3.  Click **ContosoX** and review the information provided in the ContosoX blade
+6.  Click **ContosoX** and review the information provided in the ContosoX blade
     that opens.
 
-4.  Close the **Azure Stack Portal**.
+7.  Close the **Azure Stack Portal**.
 
 **Results**: After this exercise, you should have created a new Marketplace item
 for Contoso’s StockCheck application. You should have also published the
