--- a/Instructions/20537A_LAB_AK_02.md
+++ b/Instructions/20537A_LAB_AK_02.md
@@ -41,23 +41,28 @@ Lab: Reviewing the Azure Stack Infrastructure
 3.  In the **Administrator: Windows PowerShell** window that opens, type the
     following command, and then press Enter on the keyboard:
 
-Get-Cluster \| Format-List \*
+```
+   Get-Cluster | Format-List *
+```
 
-1.  Review the **Cluster** information that is returned.
+4.  Review the **Cluster** information that is returned.
 
-2.  Type the following command and then press Enter on the keyboard.
+5.  Type the following command and then press Enter on the keyboard.
 
-Get-ClusterStorageSpacesDirect \| Format-List \*
+```
+   Get-ClusterStorageSpacesDirect | Format-List *
+```
+6.  Review the **Storage Spaces Direct** cluster information that is returned.
 
-1.  Review the **Storage Spaces Direct** cluster information that is returned.
+7.  Type the following command and then press Enter on the keyboard.
 
-2.  Type the following command and then press Enter on the keyboard.
+```
+   Get-PhysicalDisk
+```
 
-Get-PhysicalDisk
+8.  Review the **Disk** information that is returned.
 
-1.  Review the **Disk** information that is returned.
-
-2.  Close the **Administrator: Windows PowerShell** window.
+9.  Close the **Administrator: Windows PowerShell** window.
 
 ####   Task 3: Azure Stack Network Controller
 
@@ -86,18 +91,21 @@ Get-PhysicalDisk
 6.  In the **Command Prompt** window, type the following command, and then press
     Enter on the keyboard:
 
-Start PowerShell
+```
+   Start PowerShell
+```
 
-1.  In the **PowerShell** window that opens type the following command, and then
+7.  In the **PowerShell** window that opens type the following command, and then
     press Enter on the keyboard:
 
+```
 Get-NetworkController
+```
+8.  Review the **Network Controller** information that is returned.
 
-1.  Review the **Network Controller** information that is returned.
+9.  Close the **Windows PowerShell** window.
 
-2.  Close the **Windows PowerShell** window.
-
-3.  Type **Exit** in the command prompt window, and then sign out of
+10.  Type **Exit** in the command prompt window, and then sign out of
     **AzS-NC01**.
 
 ####   Task 4: Azure Stack Software Load Balancer
@@ -112,19 +120,19 @@ Get-NetworkController
 
 -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **More Services.**
 
-2.  Type **balancer** in the text box, and then click **Load Balancers**.
+5.  Type **balancer** in the text box, and then click **Load Balancers**.
 
-3.  In the **Load balancers** page that opens, click
+6.  In the **Load balancers** page that opens, click
     **FrontEndServersLoadBalancer**
 
-4.  Review the **Load Balancer** information, provided.
+7.  Review the **Load Balancer** information, provided.
 
-5.  Repeat Steps **6** and **7** for the **ManagementServersLoadBalancer**
+8.  Repeat Steps **6** and **7** for the **ManagementServersLoadBalancer**
 
-6.  Close the **Azure Stack Portal.**
+9.  Close the **Azure Stack Portal.**
 
 **Results**: After this exercise, you should have used the administrative tools
 on the Hyper-V host to confirm availability of the Azure Stack infrastructure
