--- a/Instructions/20537A_LAB_AK_05.md
+++ b/Instructions/20537A_LAB_AK_05.md
@@ -19,51 +19,68 @@ Lab: Debugging and Deploying ARM Templates
 6.  In the **Administrator: Windows PowerShell** Console, enter the following
     PowerShell command and press Enter to import the required PowerShell Module:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+**NOTE:  Be sure to replace X with your student number.**
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
+
+7.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration and add the Azure Administration environment to
     PowerShell. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
 
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\AzureStackAdminX", \$Password)
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\AzureStackAdminX", $Password)
+```
 
-Add-AzureRmEnvironment -Name AzureStackAdminX -ArmEndpoint
-"https://adminmanagement.local.azurestack.external"
+```
+Add-AzureRmEnvironment -Name AzureStackAdminX -ArmEndpoint "https://adminmanagement.local.azurestack.external"
+```
 
-\$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStackAdminX
+```
+$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStackAdminX
+```
 
-1.  Enter the following PowerShell command and press Enter to login to the
+8.  Enter the following PowerShell command and press Enter to login to the
     Tenant environment:
 
-Login-AzureRmAccount -EnvironmentName AzureStackAdminX -TenantId \$tenantID
--Credential \$Cred
+```
+Login-AzureRmAccount -EnvironmentName AzureStackAdminX -TenantId $tenantID -Credential $Cred
+```
 
-1.  Enter the following PowerShell command to return the Subscriptions that are
+9.  Enter the following PowerShell command to return the Subscriptions that are
     associated with the Tenant environment and press Enter:
 
+```
 Get-AzureRmSubscription
+```
 
-1.  In the returned information ensure the value of **SubscriptionName** is
+10.  In the returned information ensure the value of **SubscriptionName** is
     **Default Provider Subscription**.
 
-2.  Enter the following PowerShell and press Enter to return the
+11.  Enter the following PowerShell and press Enter to return the
     Microsoft.Compute API’s that are available:
 
-(Get-AzureRmResourceProvider -ProviderNamespace Microsoft.Compute).ResourceTypes
-\| Where-Object -Property ResourceTypeName -EQ -Value virtualMachines \|
+```
+(Get-AzureRmResourceProvider -ProviderNamespace Microsoft.Compute).ResourceTypes | 
+Where-Object -Property ResourceTypeName -EQ -Value virtualMachines |
 Select-Object -ExpandProperty ApiVersions
+```
 
-1.  Enter the following PowerShell and press Enter to return the
+12.  Enter the following PowerShell and press Enter to return the
     Microsoft.Storage API’s that are available:
 
-(Get-AzureRmResourceProvider -ProviderNamespace Microsoft.Storage).ResourceTypes
-\| Where-Object -Property ResourceTypeName -EQ -Value storageaccounts \|
+```
+(Get-AzureRmResourceProvider -ProviderNamespace Microsoft.Storage).ResourceTypes | 
+Where-Object -Property ResourceTypeName -EQ -Value storageaccounts |
 Select-Object -ExpandProperty ApiVersions
+```
 
-1.  Close the **Windows PowerShell** Console.
+13.  Close the **Windows PowerShell** Console.
 
 **Results**: After completing this lab, you will be able to: Install AzureRM and
 Azure Stack PowerShell from the NuGet repository. Configure Azure PowerShell to
@@ -73,8 +90,8 @@ connect to Azure Stack.
 
 ####   Task 1: Debug the ARM Template
 
-1.  On **MAS-HOST01**, copy the **C:\\Media\\ModuleFiles\\Module05 folder to the
-    C:\\StudentX** folder**.**
+1.  On **MAS-HOST01**, copy the **C:\\Media\\ModuleFiles\\Module05** folder to the
+    **C:\\StudentX** folder.
 
 2.  Click **Start**.
 
@@ -109,17 +126,19 @@ connect to Azure Stack.
 
 17. Change the content of line 81 from:
 
+```
 "location": "[variables('AzureRegion')]",
-
+```
 To
-
+```
 "location": "[parameters('AzureRegion')]",
+```
 
-1.  Click **Save** on the toolbar
+18.  Click **Save** on the toolbar
 
-2.  The **Template** is now valid.
+18.  The **Template** is now valid.
 
-3.  Do not close **Visual Studio**.
+20.  Do not close **Visual Studio**.
 
 ####   Task 2: Review and update the Parameters File and validate the ARM template
 
@@ -128,106 +147,106 @@ To
 
 2.  In the central pane change the contents of the file from by adding the
     **EnvironmentName** parameter as shown below:
-
+```
 {
-
-"\$schema":
-"https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json\#",
-
-"contentVersion": "1.0.0.0",
-
-"parameters": {
-
-"DeploymentDate": {
-
-"value": "2017-02-07"
-
+ "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json\#",
+ "contentVersion": "1.0.0.0",
+  "parameters": {
+   "DeploymentDate": {
+     "value": "2017-02-07"
+    }
+  }
 }
-
-}
-
-}
+``` 
 
 to
 
+```
 {
-
-"\$schema":
-"https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json\#",
-
-"contentVersion": "1.0.0.0",
-
-"parameters": {
-
-"DeploymentDate": {
-
-"value": "2017-02-07"
-
-},
-
-"EnvironmentName": {
-
-"value": "QA"
-
+  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json\#",
+  "contentVersion": "1.0.0.0",
+   "parameters": {
+     "DeploymentDate": {
+      "value": "2017-02-07"
+      },
+     "EnvironmentName": {
+      "value": "QA"
+     }
+   }
 }
+```
 
-}
+3.  From the toolbar, click the **Save** button.
 
-}
+4.  Close **Visual Studio**.
 
-1.  From the toolbar, click the **Save** button.
+5.  Click **Start.**
 
-2.  Close **Visual Studio**.
+6.  Navigate to **Windows PowerShell**
 
-3.  Click **Start.**
+7.  Click **Windows PowerShell**
 
-4.  Navigate to **Windows PowerShell**
-
-5.  Click **Windows PowerShell**
-
-6.  In the **Windows PowerShell** Console enter the following PowerShell command
+8.  In the **Windows PowerShell** Console enter the following PowerShell command
     and press Enter:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+**NOTE:  Be sure to replace X with your student number.  
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
 
-1.  Enter the following PowerShell command and press Enter:
+9.  Enter the following PowerShell command and press Enter:
 
-Set-Location ‘C:\\StudentX\\Module05\\VirtualNetwork’
+```
+Set-Location "C:\StudentX\Module05\VirtualNetwork"
+```
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+10.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration and add the Azure Administration environment to
     PowerShell. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
 
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
+```
 
-Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
-"https://management.local.azurestack.external"
+```
+Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint "https://management.local.azurestack.external"
+```
 
-\$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
+$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
 
-1.  Enter the following PowerShell command and press Enter to login to the
+11.  Enter the following PowerShell command and press Enter to login to the
     Tenant environment:
+    
+```
+Login-AzureRmAccount -EnvironmentName AzureStack -TenantId $tenantID -Credential $Cred
+```
 
-Login-AzureRmAccount -EnvironmentName AzureStack -TenantId \$tenantID
--Credential \$Cred
-
-1.  Enter the following PowerShell command to return the Subscriptions that are
+12.  Enter the following PowerShell command to return the Subscriptions that are
     associated with the Tenant environment and press Enter:
 
+```
 Select-AzureRmSubscription -SubscriptionName “ASUserX Subscription”
+```
 
-1.  Enter the following PowerShell command and press Enter:
+13.  Enter the following PowerShell command and press Enter:
 
+```
 New-AzureRmResourceGroup -Name “RG-VNetX” -Location local
+```
 
-Test-AzureRmResourceGroupDeployment -ResourceGroupName RG-VNetX -TemplateFile
-.\\azuredeploy.json -TemplateParameterFile .\\azuredeploy.parameters.json -Mode
-Incremental -Verbose
+**Note:  Run the following on a single line.**
 
-1.  Close the **Window PowerShell c**onsole.
+```
+Test-AzureRmResourceGroupDeployment -ResourceGroupName RG-VNetX -TemplateFile .\azuredeploy.json -TemplateParameterFile .\azuredeploy.parameters.json -Mode Incremental -Verbose
+```
+
+14.  Close the **Window PowerShell c**onsole.
 
 **Results**: After completing this exercise, you will be able to debug ARM
 Templates in Visual Studio, review and update parameter files for deployments
