--- a/Instructions/20537A_LAB_AK_06.md
+++ b/Instructions/20537A_LAB_AK_06.md
@@ -32,7 +32,7 @@ Lab: Provisioning Storage and Virtual Machines in Microsoft Azure Stack
 
 -   Password never expires: **Select**
 
-1.  Complete the wizard and then close **Active Directory Users and Computers**.
+6.  Complete the wizard and then close **Active Directory Users and Computers**.
 
 ![](media/6d654d37fc3b91e5a5db729bec505e80.png)
 
@@ -53,31 +53,31 @@ Lab: Provisioning Storage and Virtual Machines in Microsoft Azure Stack
 
 -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack** page that opens, click **More Services.**
+4.  In the **Microsoft Azure Stack** page that opens, click **More Services.**
 
-2.  Under **General**, click **Subscriptions**.
+5.  Under **General**, click **Subscriptions**.
 
-3.  Click **Add**.
+6.  Click **Add**.
 
-4.  In the **Get a subscription** blade, in the **Display name** box, type
+7.  In the **Get a subscription** blade, in the **Display name** box, type
     **ASUserX Subscription**.
 
-5.  Click **Select an offer.**
+8.  Click **Select an offer.**
 
-6.  In the **Choose an offer** blade, click **Virtual MachinesX**.
+9.  In the **Choose an offer** blade, click **Virtual MachinesX**.
 
-7.  In the **Get a subscription** blade, click **Create**, then click
+10.  In the **Get a subscription** blade, click **Create**, then click
     **Refresh**.
 
-8.  Click **More Services**, then click **Subscriptions** again.
+11.  Click **More Services**, then click **Subscriptions** again.
 
-9.  In the **Subscriptions** blade, you will see the new **ASUserX
+12.  In the **Subscriptions** blade, you will see the new **ASUserX
     Subscription** listed.
 
-10. Click the **Microsoft Azure Stack** title to return to the home page of the
+13. Click the **Microsoft Azure Stack** title to return to the home page of the
     **Azure Stack** Portal.
 
-11. Do not close **Internet Explorer**.
+14. Do not close **Internet Explorer**.
 
 ####   Task 3: Create Resource Groups
 
@@ -166,53 +166,62 @@ Portal.
 6.  In the **Administrator: Windows PowerShell** enter the following PowerShell
     command and press Enter to import the required PowerShell Module:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+7.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
-Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
-https://management.local.azurestack.external
+Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint https://management.local.azurestack.external
 
-\$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
 
-1.  Enter the following PowerShell command and press Enter to create a
+8.  Enter the following PowerShell command and press Enter to create a
     PowerShell credential object to login to Azure Stack with:
 
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
+```
 
-1.  Enter the following PowerShell command and press Enter to login to Azure
+9.  Enter the following PowerShell command and press Enter to login to Azure
     Stack:
+    
+```
+Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId $TenantID -Credential $Cred
+```
 
-Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId \$TenantID
--Credential \$Cred
+10.  Enter the following PowerShell command and press Enter:
 
-1.  Enter the following PowerShell command and press Enter:
+```
+$params = @{savmstorageType=’Standard_LRS’; saname=’userxvm’}
+```
 
-\$params = \@{savmstorageType=’Standard_LRS’; saname=’ userxvm’}
+11.  Replace **x** in **userxvm** with your student number.
 
-1.  Replace **x** in **userxvm** with your student number.
+12.  Enter the following **PowerShell** command and press Enter
 
-2.  Enter the following **PowerShel**l command and press Enter
-
-New-AzureRmResourceGroupDeployment -ResourceGroupName RG-local-VMStorage -Name
+```
+New-AzureRmResourceGroupDeployment -ResourceGroupName RG-local-VMStorageX -Name
 **asuserx**savmstorage -TemplateFile
-'C:\\Media\\ModuleFiles\\Module06\\storageAccount.json' -TemplateParameterObject
-\$params -Verbose
+'C:\Media\ModuleFiles\Module06\storageAccount.json' -TemplateParameterObject
+$params -Verbose
+```
 
-1.  Close the **Administrator: Windows PowerShell** console.
+13.  Close the **Administrator: Windows PowerShell** console.
 
-2.  Go back to the **Azure Stack Portal** (that should still be open). In the
+14.  Go back to the **Azure Stack Portal** (that should still be open). In the
     **Storage accounts** blade, click **Refresh**. The **asuserxsavmsdiags** and
     **userxvm\<random_id\>** Storage Accounts will be shown.
 
-3.  Click the **Microsoft Azure Stack** title to return to the home page of the
+15.  Click the **Microsoft Azure Stack** title to return to the home page of the
     **Azure Stack** Portal.
 
-4.  Do not close **Internet Explorer**.
+16.  Do not close **Internet Explorer**.
 
 **Results**: After completing this exercise, you will be able to create a
 storage account by using the Azure Portal and create a storage account by using
@@ -264,62 +273,64 @@ Azure PowerShell and an ARM template.
 6.  In the **Administrator: Windows PowerShell** enter the following PowerShell
     command and press Enter to import the required PowerShell Module:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+7.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
-Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
-https://management.local.azurestack.external
+Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint https://management.local.azurestack.external
 
-\$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
 
-1.  Enter the following PowerShell command and press Enter to create a
+8.  Enter the following PowerShell command and press Enter to create a
     PowerShell credential object to login to Azure Stack with:
-
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
-
-1.  Enter the following PowerShell command and press Enter to login to Azure
+    
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
+```
+9.  Enter the following PowerShell command and press Enter to login to Azure
     Stack:
+    
+```
+Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId $TenantID -Credential $Cred
+```
 
-Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId \$TenantID
--Credential \$Cred
+10.  Enter the following PowerShell command and press Enter after each command:
 
-1.  Enter the following PowerShell command and press Enter after each command:
+```
+$params = @{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet0’; newSubnetAddressPrefix = ’10.0.0.0/24’}
 
-\$params = \@{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet0’;
-newSubnetAddressPrefix = ’10.0.0.0/24’}
+New-AzureRmResourceGroupDeployment -Name AddSubnets -ResourceGroupName
+RG-local-VNMain -TemplateFile 'C:\Media\ModuleFiles\Module06\addSubnets.json' -TemplateParameterObject
+$params -Verbose
+
+$params = @{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet1’; newSubnetAddressPrefix = ’10.0.1.0/24’}
 
 New-AzureRmResourceGroupDeployment -Name AddSubnets -ResourceGroupName
 RG-local-VNMain -TemplateFile
-'C:\\Media\\ModuleFiles\\Module06\\addSubnets.json' -TemplateParameterObject
-\$params -Verbose
+'C:\Media\ModuleFiles\Module06\addSubnets.json' -TemplateParameterObject
+$params -Verbose
 
-\$params = \@{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet1’;
-newSubnetAddressPrefix = ’10.0.1.0/24’}
-
-New-AzureRmResourceGroupDeployment -Name AddSubnets -ResourceGroupName
-RG-local-VNMain -TemplateFile
-'C:\\Media\\ModuleFiles\\Module06\\addSubnets.json' -TemplateParameterObject
-\$params -Verbose
-
-\$params = \@{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet2’;
-newSubnetAddressPrefix = ’10.0.2.0/24’}
+$params = @{existingVNETName=’VN-local-Main’; newSubnetName = ‘Autosubnet2’; newSubnetAddressPrefix = ’10.0.2.0/24’}
 
 New-AzureRmResourceGroupDeployment -Name AddSubnets -ResourceGroupName
 RG-local-VNMain -TemplateFile
-'C:\\Media\\ModuleFiles\\Module06\\addSubnets.json' -TemplateParameterObject
-\$params -Verbose
+'C:\Media\ModuleFiles\Module06\addSubnets.json' -TemplateParameterObject
+$params -Verbose
+```
 
-1.  Got back in to the Internet Explorer window (that should still be open). In
+11.  Got back in to the Internet Explorer window (that should still be open). In
     the **Virtual networks** blade, click **VN-local-Main**.
 
-2.  In the **VN-local-Main** blade, click **Subnets**.
+12.  In the **VN-local-Main** blade, click **Subnets**.
 
-3.  You will see four subnets available:
+13.  You will see four subnets available:
 
 | **Name**    | **Address**  **Range** |
 |-------------|------------------------|
@@ -328,10 +339,10 @@ RG-local-VNMain -TemplateFile
 | AutoSubnet1 | 10.0.1.0/24            |
 | AutoSubnet2 | 10.0.2.0/24            |
 
-4.  Click the **Microsoft Azure Stack** title to return to the home page of the
+14.  Click the **Microsoft Azure Stack** title to return to the home page of the
     **Azure Stack** Portal.
 
-5.  Do not close Internet Explorer.
+15.  Do not close Internet Explorer.
 
 **Results**: After completing this exercise, you will be able to create a
 virtual network by using the Azure Portal and create additional subnets and an
@@ -354,39 +365,47 @@ NSG by using Azure PowerShell and an ARM template.
 6.  In the **Administrator: Windows PowerShell** enter the following PowerShell
     command and press Enter to import the required PowerShell Module:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+7.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
-Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
-https://management.local.azurestack.external
+Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint https://management.local.azurestack.external
 
-\$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
 
-1.  Enter the following PowerShell command and press Enter to create a
+8.  Enter the following PowerShell command and press Enter to create a
     PowerShell credential object to login to Azure Stack with:
 
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", \$Password)
+```
 
-1.  Enter the following PowerShell command and press Enter to login to Azure
+9.  Enter the following PowerShell command and press Enter to login to Azure
     Stack:
 
-Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId \$TenantID
--Credential \$Cred
+```
+Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId $TenantID -Credential $Cred
+```
 
-1.  Enter the following PowerShell commands pressing Enter after each command:
+10.  Enter the following PowerShell commands pressing Enter after each command:
 
+```
 Select-AzureRmSubscription -SubscriptionName "ASUserX Subscription"
 
-set-location C:\\Media\\ModuleFiles\\Module06\\AD\\
+set-location C:\Media\ModuleFiles\Module06\AD\
 
-.\\Deploy-ActiveDirectory.ps1
+.\Deploy-ActiveDirectory.ps1
 
-1.  In the **Enter your username prompt** that appears, type the **ASUserX**
+```
+
+11. In the **Enter your username prompt** that appears, type the **ASUserX**
     username that was provided to you and then press enter. For example,
     **ASUser1**.
 
@@ -397,18 +416,18 @@ set-location C:\\Media\\ModuleFiles\\Module06\\AD\\
 >   instance of an object**” may appear. This can be ignored. Continue with the
 >   steps below to monitor the deployment.
 
-1.  Go back in to the **Azure Stack Portal** that is logged in with the
+12.  Go back in to the **Azure Stack Portal** that is logged in with the
     **ASUserX** account, and then from the home page, click **Resource Groups**.
 
-2.  Click the **RG-Local-ActiveDirectory** Resource Group and then click
+13.  Click the **RG-Local-ActiveDirectory** Resource Group and then click
     **Deployments**.
 
-3.  Monitor the **ADTest** deployment until the **Status** column changes from
+14.  Monitor the **ADTest** deployment until the **Status** column changes from
     **Deploying** to **Succeeded**.
 
-4.  Do not close **Internet Explorer** or the **Windows PowerShell** window.
+15.  Do not close **Internet Explorer** or the **Windows PowerShell** window.
 
-5.  Do not continue with the next task until the **ADTest** deployment has
+16.  Do not continue with the next task until the **ADTest** deployment has
     completed.
 
 ####   Task 2: Deploy System Center 2016 Operations Manager using an ARM template
@@ -449,21 +468,23 @@ set-location C:\\Media\\ModuleFiles\\Module06\\AD\\
 12. In the **Windows PowerShell** window that was left open from the previous
     task, type the following commands pressing enter after each command:
 
-Set-Location C:\\StudentX\\Module06\\SCOM-Deploy\\
+```
+Set-Location C:\StudentX\Module06\SCOM-Deploy\
 
-.\\DeploySCOM.ps1
+.\DeploySCOM.ps1
+```
 
-1.  The **System Center 2016 Operations Manager** deployment will commence. The
+13.  The **System Center 2016 Operations Manager** deployment will commence. The
     installation can take up to 100 minutes to complete.
 
-2.  In the **Azure Stack Portal** that was left open from the previous task,
+14.  In the **Azure Stack Portal** that was left open from the previous task,
     logged in as **ASUserX**, click **Resource Groups** and then click
     **RG-Local-SCOM** and then click **Deployments**.
 
-3.  Monitor the **SCOM** deployment until the **Status** column changes from
+15.  Monitor the **SCOM** deployment until the **Status** column changes from
     **Deploying** to **Succeeded**.
 
-4.  Leave the **Windows PowerShell** and **Azure Stack Portal** open.
+16.  Leave the **Windows PowerShell** and **Azure Stack Portal** open.
 
 ####   Task 3: Test connectivity to the System Center 2016 Operations Manager environment
 
@@ -521,20 +542,20 @@ Set-Location C:\\StudentX\\Module06\\SCOM-Deploy\\
 >   **Failed to connect to server ‘SCOM01.ad.contoso.com’** appears perform the
 >   following steps.
 
-1.  Click **Close**.
+22.  Click **Close**.
 
-2.  Click Start, then click Windows Administrative Tools.
+23.  Click Start, then click Windows Administrative Tools.
 
-3.  In the **Administrative Tools** window that opens, double-click
+24.  In the **Administrative Tools** window that opens, double-click
     **Services**.
 
-4.  In the **Services** window that opens, ensure the **SQL** and **System
+25.  In the **Services** window that opens, ensure the **SQL** and **System
     Center** services that set to start atomically are running. If they are not,
     start them.
 
-5.  Wait 3 minutes and then return to **Step 19** above.
+26.  Wait 3 minutes and then return to **Step 19** above.
 
-6.  Sign out of **SCOM01.**
+27.  Sign out of **SCOM01.**
 
 **Results**: After completing this exercise, you will be able to deploy an
 Active Directory Domain Controller using an ARM Template. Deploy System Center
