--- a/Instructions/20537A_LAB_AK_09.md
+++ b/Instructions/20537A_LAB_AK_09.md
@@ -19,43 +19,50 @@ Lab: Obtaining Usage Information
 6.  In the **Administrator: Windows PowerShell** enter the following PowerShell
     command and press Enter to import the required PowerShell Module:
 
-Import-Module C:\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+```
+Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
+```
 
-1.  Enter the following PowerShell commands to obtain the GUID for the Active
+7.  Enter the following PowerShell commands to obtain the GUID for the Active
     Directory registration. Press Enter at the end of each PowerShell command:
 
-\$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
+```
+$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
-Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
-https://management.local.azurestack.external
+Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint https://management.local.azurestack.external
 
-\$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+$TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
+```
 
-1.  Enter the following PowerShell command and press Enter to create a
+8.  Enter the following PowerShell command and press Enter to create a
     PowerShell credential object to login to Azure Stack with:
 
-\$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
+```
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
+```
 
-1.  Enter the following PowerShell command and press Enter to login to Azure
+9.  Enter the following PowerShell command and press Enter to login to Azure
     Stack:
 
-Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId \$TenantID
--Credential \$Cred
+```
+Login-AzureRmAccount -EnvironmentName "AzureStack" -TenantId $TenantID -Credential $Cred
+```
 
-1.  Enter the following PowerShell command and press Enter after each command:
+10.  Enter the following PowerShell command and press Enter after each command:
 
-Set-Location C:\\Media\\ModuleFiles\\Module09
+```
+Set-Location C:\Media\ModuleFiles\Module09
 
-.\\Get-TenantUsage.ps1
+.\Get-TenantUsage.ps1
+```
 
-1.  Provide a start date of 5 days ago and an end date of yesterday.
+11.  Provide a start date of 5 days ago and an end date of yesterday.
 
-2.  Review the **Hourly** usage information that is returned. Note that to
+12.  Review the **Hourly** usage information that is returned. Note that to
     determine the resource used you must reference the **MeterID** returned with
     the table provided in the **Tenant Based Usage** topic in this module.
 
-3.  Close the **Windows PowerShell** window.
+13.  Close the **Windows PowerShell** window.
 
 ####   Task 2: Reviewing Azure Stack resource consumption
 
@@ -65,70 +72,70 @@ Set-Location C:\\Media\\ModuleFiles\\Module09
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\AzureStackAdminX**
+    -   Username: **AzureStack\\AzureStackAdminX**
 
--   Password: **Pa55w.rd**
+    -   Password: **Pa55w.rd**
 
-1.  In the Microsoft Azure Stack - Administration, page that opens, click More
+4.  In the Microsoft Azure Stack - Administration, page that opens, click More
     Services.
 
-2.  Under the Administration section, click Region Management.
+5.  Under the Administration section, click Region Management.
 
-3.  In the **local** blade that opens, review the following information:
+6.  In the **local** blade that opens, review the following information:
 
--   Alerts
+    -   Alerts
 
--   Updates
+    -   Updates
 
--   Resource Providers
+    -   Resource Providers
 
--   Infrastructure Roles
+    -   Infrastructure Roles
 
-1.  From the navigation pane, under **Infrastructure Resources**, click
+7.  From the navigation pane, under **Infrastructure Resources**, click
     **Capacity**.
 
-2.  In the **local – Capacity** blade that opens, review the following
+8.  In the **local – Capacity** blade that opens, review the following
     information:
 
--   Alerts
+    -   Alerts
 
--   Scale Units
+    -   Scale Units
 
--   Physical storage
+    -   Physical storage
 
--   Physical memory
+    -   Physical memory
 
--   Public IP pools usage
+    -   Public IP pools usage
 
-1.  From the navigation pane, click **Scale Units**.
+9.  From the navigation pane, click **Scale Units**.
 
-2.  In the **local – Scale units** blade that opens, click **S-Cluster**.
+10.  In the **local – Scale units** blade that opens, click **S-Cluster**.
 
-3.  In the **S-Cluste**r blade that opens, review the following information:
+11.  In the **S-Cluster** blade that opens, review the following information:
 
--   Region
+    -   Region
 
--   Total logical cores
+    -   Total logical cores
 
--   Type
+    -   Type
 
--   Total memory
+    -   Total memory
 
-1.  From the navigation pane, under **Tenant Resources**, click **Storage
+12.  From the navigation pane, under **Tenant Resources**, click **Storage
     accounts**.
 
-2.  Review the information provided in the **local – Storage accounts** blade
+13.  Review the information provided in the **local – Storage accounts** blade
     that opens.
 
-3.  From the navigation pane, under **Tenant Resources,** click **Virtual
-    networks.**
+14.  From the navigation pane, under **Tenant Resources**, click **Virtual
+    networks**.
 
-4.  Review the information provided in the **local – Virtual networks** blade
+15.  Review the information provided in the **local – Virtual networks** blade
     that opens.
 
-5.  Close the Microsoft **Azure Stack - Administration** portal.
+16.  Close the Microsoft **Azure Stack - Administration** portal.
 
-6.  Close all open windows.
+17.  Close all open windows.
 
 **Results**: After completing this exercise, you will be able to: Obtain Tenant
 usage information in Azure Stack using PowerShell. Obtain Azure Stack resource
