--- a/Instructions/20537A_LAB_AK_05.md
+++ b/Instructions/20537A_LAB_AK_05.md
@@ -147,9 +147,10 @@ To
 
 2.  In the central pane change the contents of the file from by adding the
     **EnvironmentName** parameter as shown below:
+    
 ```
 {
- "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json\#",
+ "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
  "contentVersion": "1.0.0.0",
   "parameters": {
    "DeploymentDate": {
@@ -189,7 +190,8 @@ to
 8.  In the **Windows PowerShell** Console enter the following PowerShell command
     and press Enter:
 
-**NOTE:  Be sure to replace X with your student number.  
+**Note:  Be sure to replace X with your student number**. 
+
 ```
 Import-Module C:\AzureStack-Tools-master\Connect\AzureStack.Connect.psm1
 ```
@@ -243,10 +245,12 @@ New-AzureRmResourceGroup -Name “RG-VNetX” -Location local
 **Note:  Run the following on a single line.**
 
 ```
-Test-AzureRmResourceGroupDeployment -ResourceGroupName RG-VNetX -TemplateFile .\azuredeploy.json -TemplateParameterFile .\azuredeploy.parameters.json -Mode Incremental -Verbose
+Test-AzureRmResourceGroupDeployment -ResourceGroupName RG-VNetX 
+-TemplateFile .\azuredeploy.json -TemplateParameterFile .\azuredeploy.parameters.json 
+-Mode Incremental -Verbose
 ```
 
-14.  Close the **Window PowerShell c**onsole.
+14.  Close the **Window PowerShell console**.
 
 **Results**: After completing this exercise, you will be able to debug ARM
 Templates in Visual Studio, review and update parameter files for deployments
