--- a/Instructions/20537A_LAB_AK_05.md
+++ b/Instructions/20537A_LAB_AK_05.md
@@ -211,7 +211,7 @@ $Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 ```
 
 ```
-$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\AzureStackAdminX", $Password)
 ```
 
 ```
@@ -233,7 +233,7 @@ Login-AzureRmAccount -EnvironmentName AzureStack -TenantId $tenantID -Credential
     associated with the Tenant environment and press Enter:
 
 ```
-Select-AzureRmSubscription -SubscriptionName “ASUserX Subscription”
+Select-AzureRmSubscription -SubscriptionName “Virtual MachinesX Subscription”
 ```
 
 13.  Enter the following PowerShell command and press Enter:
