--- a/Instructions/20537A_LAB_05.md
+++ b/Instructions/20537A_LAB_05.md
@@ -204,7 +204,7 @@ Set-Location ‘C:\\StudentX\\Module05\\VirtualNetwork’
 \$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
 \$Cred = New-Object System.Management.Automation.PSCredential
-("AzureStack\\ASUserX", \$Password)
+("AzureStack\\AzureStackAdminX", \$Password)
 
 Add-AzureRmEnvironment -Name AzureStack -ArmEndpoint
 "https://management.local.azurestack.external"
@@ -220,7 +220,7 @@ Login-AzureRmAccount -EnvironmentName AzureStack -TenantId \$tenantID
 1.  Enter the following PowerShell command to return the Subscriptions that are
     associated with the Tenant environment and press Enter:
 
-Select-AzureRmSubscription -SubscriptionName “ASUserX Subscription”
+Select-AzureRmSubscription -SubscriptionName “Virtual MachinesX Subscription”
 
 1.  Enter the following PowerShell command and press Enter:
 
