Added subscription display name
Added subscription display name Virtual MachinesX

--- a/Instructions/20537A_LAB_AK_04.md
+++ b/Instructions/20537A_LAB_AK_04.md
@@ -165,18 +165,20 @@ machines add-on plan with the offer.
 
 7.  In the **Subscriptions** blade, click **Add**.
 
-8.  In the **Get a Subscription** blade that opens click **Select an Offer**.
+8.  In the **Display Name** box, type **Virtul MachinesX**
 
-9.  In the **Choose an Offer** page that opens click **Virtual MachinesX**.
+9.  In the **Get a Subscription** blade that opens click **Select an Offer**.
 
-10. Click **Create** and then click **Refresh**.
+10.  In the **Choose an Offer** page that opens click **Virtual MachinesX**.
 
-11. Click **More Services** and then click **Subscriptions**.
+11. Click **Create** and then click **Refresh**.
 
-12. Confirm the **Virtual MachinesX** Subscription is listed. If it is not
+12. Click **More Services** and then click **Subscriptions**.
+
+13. Confirm the **Virtual MachinesX** Subscription is listed. If it is not
     listed, press **F5** to refresh the entire browser window.
 
-13. Do not close the **InPrivate browsing** window.
+14. Do not close the **InPrivate browsing** window.
 
 ####   Task 3: Adding an Add-On Plan to an Offer
 
