--- a/Instructions/20537A_LAB_AK_07.md
+++ b/Instructions/20537A_LAB_AK_07.md
@@ -122,7 +122,7 @@ the SQL and MySQL resource providers.
 3.  In the **New plan** blade that opens, configure the **Plan** with the
     following settings, all other settings should remain as default:
 
-    -   Display name: **SQL-databases**
+    -   Display name: **SQL-databasesX**
 
     -   Resource group: Use existing **SQLRPRG**
 
@@ -132,7 +132,7 @@ the SQL and MySQL resource providers.
 
 4.  Click **Create** to create the plan.
 
-5.  In the **Plans** blade, click **Refresh** and confirm the **SQL-databases**
+5.  In the **Plans** blade, click **Refresh** and confirm the **SQL-databasesX**
     Plan is displayed.
 
 6.  Click the **Microsoft Azure Stack – Administration** title to return to the
@@ -150,20 +150,20 @@ the SQL and MySQL resource providers.
 3.  In the **New Offer** blade that opens, configure the following settings, all
     other settings should remain as default:
 
-    -   Display name: **SQL-databases**
+    -   Display name: **SQL-databasesX**
 
     -   Resource group: Use existing **SQLRPRG**
 
-    -   Base plan: SQL-databases
+    -   Base plan: SQL-databasesX
 
 4.  Click **Create** to create the **Offer**.
 
-5.  In the **Offer** blade, click **Refresh** and confirm the **SQL-databases**
+5.  In the **Offer** blade, click **Refresh** and confirm the **SQL-databasesX**
     Offer is displayed.
 
 6.  Click the **SQL-databases** Offer.
 
-7.  In the **SQL-databases** blade that opens, click **Change State**, then
+7.  In the **SQL-databasesX** blade that opens, click **Change State**, then
     click **Public**.
 
 8.  Close Internet Explorer.
@@ -191,16 +191,16 @@ tenants to subscribe to it.
 
 5.  Click **Add**.
 
-6.  In the **Get a subscription** blade that opens, type **SQL-databases** in
+6.  In the **Get a subscription** blade that opens, type **SQL-databasesX** in
     the **Display name** box and then click **Select an offer**.
 
-7.  In the **Choose an offer** blade that opens, click **SQL-databases**.
+7.  In the **Choose an offer** blade that opens, click **SQL-databasesX**.
 
 8.  Click **Create** and then click **Refresh**.
 
 9.  Click **More Services a**nd then click **Subscriptions**.
 
-10. Confirm the **SQL-databases** subscription is listed in the
+10. Confirm the **SQL-databasesX** subscription is listed in the
     **Subscriptions** blade that opens.
 
 11. Click the **Microsoft Azure Stack t**itle to return to the home page.
@@ -221,7 +221,7 @@ tenants to subscribe to it.
 
     -   Max size in MB: **20**
 
-    -   Subscription: **SQL-databases**
+    -   Subscription: **SQL-databasesX**
 
     -   Resource Group: Create new: **SQL-databasesX**
 
