--- a/Instructions/20537A_LAB_07.md
+++ b/Instructions/20537A_LAB_07.md
@@ -194,7 +194,7 @@ table.
     from the **Plans** blade, add a new Plan with the following settings, all
     other settings should remain as default:
 
-    -   Display name: **SQL-databases**
+    -   Display name: **SQL-databasesX**
 
     -   Resource group: Use existing **SQLRPRG**
 
@@ -202,7 +202,7 @@ table.
 
     -   Quotas: **Default Quota**
 
-2.  Create the **Plan** and confirm the **SQL-databases** plan is displayed in
+2.  Create the **Plan** and confirm the **SQL-databasesX** plan is displayed in
     the Plans blade
 
 3.  Return to the home page of the **Azure Stack** portal and leave **Internet
@@ -223,11 +223,11 @@ table.
     from the **Offers** blade, add a new **Offer** with the following settings,
     all other settings should remain as default:
 
-    -   Display name: **SQL-databases**
+    -   Display name: **SQL-databasesX**
 
     -   Resource group: Use existing **SQLRPRG**
 
-    -   Base plan: **SQL-databases**
+    -   Base plan: **SQL-databasesX**
 
 2.  Create the **Offer** and then open it from the **Offers** blade and change
     the **State** to **Public**
@@ -276,12 +276,12 @@ table.
     **Subscription** with the following settings, all other settings should
     remain as default:
 
-    -   Display name: **SQL-databases**
+    -   Display name: **SQL-databasesX**
 
-    -   Choose an offer: **SQL-databases**
+    -   Choose an offer: **SQL-databasesX**
 
 3.  Create the subscription and then refresh the page and confirm the
-    **SQL-databases** Subscription is listed
+    **SQL-databasesX** Subscription is listed
 
 4.  Return to the home page of the **Azure Stack** portal and leave **Internet
     Explorer** running
@@ -306,7 +306,7 @@ table.
 
 -   Max size in MB: **20**
 
--   Subscription: **SQL-databases**
+-   Subscription: **SQL-databasesX**
 
 -   Resource Group: Create new: **SQL-databasesX**
 
