--- a/Instructions/20537A_LAB_07.md
+++ b/Instructions/20537A_LAB_07.md
@@ -63,6 +63,8 @@ The main tasks for this exercise are as follows:
 
 2. Add a hosting server to the MySQL resource provider
 
+NOTE: This Exercise can only be performed once. It is advised that the instructor performes this exercise while the students review.
+
 ####   Task 1: Add a hosting server to the SQL resource provider
 
 To perform this task, use the computer and tool information in the following
