--- a/Instructions/20537A_LAB_AK_07.md
+++ b/Instructions/20537A_LAB_AK_07.md
@@ -6,6 +6,8 @@ Lab: Configuring Platform as a Service in Azure Stack
 
 ####   Task 1: Add a hosting server to the SQL resource provider
 
+NOTE: This Exercise can only be performed once. It is advised that the instructor performes this exercise while the students review.
+
 1.  On **MAS-HOST01**, open **Internet Explorer**.
 
 2.  Browse to **https://adminportal.local.azurestack.external**
