Updated formatting in commands
Updated formatting in powershell commands

--- a/Instructions/20537A_LAB_AK_06.md
+++ b/Instructions/20537A_LAB_AK_06.md
@@ -207,21 +207,22 @@ $params = @{savmstorageType=’Standard_LRS’; saname=’userxvm’}
 
 ```
 New-AzureRmResourceGroupDeployment -ResourceGroupName RG-local-VMStorageX -Name
-**asuserx**savmstorage -TemplateFile
+asuserxsavmstorage -TemplateFile
 'C:\Media\ModuleFiles\Module06\storageAccount.json' -TemplateParameterObject
 $params -Verbose
 ```
+13.  Replace **x** in **asuserxsavmstorage** with your student number.
 
-13.  Close the **Administrator: Windows PowerShell** console.
+14.  Close the **Administrator: Windows PowerShell** console.
 
-14.  Go back to the **Azure Stack Portal** (that should still be open). In the
+15.  Go back to the **Azure Stack Portal** (that should still be open). In the
     **Storage accounts** blade, click **Refresh**. The **asuserxsavmsdiags** and
     **userxvm\<random_id\>** Storage Accounts will be shown.
 
-15.  Click the **Microsoft Azure Stack** title to return to the home page of the
+16.  Click the **Microsoft Azure Stack** title to return to the home page of the
     **Azure Stack** Portal.
 
-16.  Do not close **Internet Explorer**.
+17.  Do not close **Internet Explorer**.
 
 **Results**: After completing this exercise, you will be able to create a
 storage account by using the Azure Portal and create a storage account by using
@@ -384,7 +385,7 @@ $TenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName AzureStack
     PowerShell credential object to login to Azure Stack with:
 
 ```
-$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", \$Password)
+$Cred = New-Object System.Management.Automation.PSCredential("AzureStack\ASUserX", $Password)
 ```
 
 9.  Enter the following PowerShell command and press Enter to login to Azure
